fix: fix error message not showing up anymore

--- a/styles/global.css
+++ b/styles/global.css
@@ -89,3 +89,7 @@ header a {
     background-repeat: no-repeat;
     background-size: 65%;
 }
+#first-load {
+    margin-left: auto;
+    margin-right: auto;
+}
